# scoped-sleep

./: Cargo.toml  README.md
.github/.cspell/: dictionary.txt  project-dictionary.txt  rust-dependencies.txt
.github/workflows/: ci.yml
src/: lib.rs  scoped_sleep.rs
