[package]
name = "scoped-sleep"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "RAII sleep"
keywords = []
categories = ["rust-patterns"]
repository = "https://github.com/openrr/scoped-sleep"

[dependencies]

[lints]
workspace = true

[workspace.lints.rust]
missing_debug_implementations = "warn"
# missing_docs = "warn" # TODO: This somehow warns examples.
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unreachable_pub = "warn"
